--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-sqs": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.750.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
