--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "dist": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "db:generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "db:push": "npx prisma db push --schema ./src/prisma/schema.prisma"
   },
   "author": "mayank",
   "license": "ISC",
@@ -17,11 +19,13 @@
     "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/client-sqs": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.750.0",
+    "@prisma/client": "^6.4.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "prisma": "^6.4.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
