--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "mayank",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ecs": "^3.758.0",
     "@aws-sdk/client-s3": "^3.750.0",
     "@aws-sdk/client-sqs": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.750.0",
