--- a/docker/package.json
+++ b/docker/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
+    "@types/mime-types": "^2.1.4",
     "axios": "^1.8.1",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@types/node": "^22.13.8",
