--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "create-backend-app": "./bin/create-backend-app.js"
   },
   "scripts": {
-    "dist": "npx tsc",
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "db:generate": "prisma generate --schema=./src/prisma/schema.prisma",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "typescript": "^5.8.2"
   }
 }
